[tool.poetry]
name = "pysparsdr"
version = "0.1.0"
description = ""
authors = ["Raghav Subbaraman <rsubbaraman@eng.ucsd.edu>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
snakeviz = "^2.2.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
